Changes for RCP 3.1 compatibility
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@310 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.island/build.properties
+++ b/net.sourceforge.eclipsetrader.island/build.properties
@@ -2,4 +2,5 @@ source.island.jar = src/
 output.island.jar = bin/
 bin.includes = plugin.xml,\
                island.jar,\
-               about.ini
+               about.ini,\
+               META-INF/
