--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -6,4 +6,5 @@ bin.includes = plugin.xml,\
                license.txt,\
                mapping.xml,\
                cpl-v10.html,\
-               about.ini
+               about.ini,\
+               META-INF/
