--- a/net.sourceforge.eclipsetrader.directaworld/build.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                directaworld.jar,\
                icons/,\
                cpl-v10.html,\
-               about.ini
+               about.ini,\
+               META-INF/
