Changes for RCP 3.1 compatibility
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@318 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.help/build.properties
+++ b/net.sourceforge.eclipsetrader.help/build.properties
@@ -11,4 +11,5 @@ bin.includes = plugin.xml,\
                toc.xml,\
                cpl-v10.html,\
                user_guide.xml,\
-               epl-v10.html
+               epl-v10.html,\
+               META-INF/
