--- a/net.sourceforge.eclipsetrader.help/plugin.xml
+++ b/net.sourceforge.eclipsetrader.help/plugin.xml
@@ -1,22 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="net.sourceforge.eclipsetrader.help"
-   name="Help Plug-in"
-   version="0.14.0"
-   provider-name="Sourceforge.net">
+<plugin>
 
-   <runtime>
-      <library name="help.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-      <import plugin="org.eclipse.help"/>
-   </requires>
-
-   <extension
+     <extension
          name="Primary"
          point="org.eclipse.help.toc">
       <toc
